# Qt-setup

./: .gitignore  LICENSE  README.md
example_apps/Hello_Qt_App/: CMakeLists.txt  build_msvc2022.ps1  cmake_build.sh  hello_qt.pro  qmake_build.sh
example_apps/Hello_Qt_App/src/: hello_qt.cpp  hello_qt_threads.cpp
example_apps/Minimal_App/: CMakeLists.txt  build.sh  build_msvc2022.ps1  vram_worker.cpp
example_apps/Minimal_App/cmake/: FindNVML.cmake
example_apps/Minimal_App/src/: mainwindow.cpp  mainwindow.h  nvml_vram.cpp  nvml_vram.h  vram_worker.h
